<resources>
    <string name="num_0">0</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="app_name">Solife</string>
    <string name="app_next">Next</string>
    <string name="app_save">Save</string>
    <string name="app_start">Start</string>
    <string name="app_restore">Restore</string>
    <string name="app_today">Today</string>
    <string name="app_on">On</string>
    <string name="app_off">Off</string>
    <string name="app_alarm">Alarm</string>
    <string name="app_pause">Pause</string>
    <string name="app_remaining">Remaining</string>
    <string name="app_exit_alert">Repeat press back fot exit</string>
    <string name="mdtp_cancel">انصراف</string>
    <string name="home_injection">Injection</string>
    <string name="home_calendar">Calendar</string>
    <string name="home_tips">Tips</string>
    <string name="home_inbox">Inbox</string>
    <string name="home_more">More</string>
    <string name="more_safety">Safety Information</string>
    <string name="more_faq">FAQ</string>
    <string name="more_prescribing">Prescribing Information</string>
    <string name="more_terms">Terms and Conditions</string>
    <string name="home_welcome_title">سلام به سولایف خوش اومدی!</string>
    <string name="home_welcome_message"> این یک نرم افزار دستیار پزشکی نیست و صرفا برای سازماندهی مصرف داروی سینورا می باشد. لطفا قوانین مربوط به استفاده از این نرم افزار رو مطالعه کنید و سپس موافقت خود را با ادامه کار با نرم افزار.اعلام کنید</string>
    <string name="home_prep">Prep and Injection</string>
    <string name="home_medication">Medication Settings</string>
    <string name="home_alarm">Alarm Settings</string>
    <string name="about_tel_message">سولایف نسخه ۱,۰,۰\nتلفن مرکز حمایت از بیمار ارکیدلایف:</string>
    <string name="about_tel_button">۰۲۱-۴۲۵۹۳</string>
    <string name="about_tel_value">tel:+9821-42-593</string>
    <string name="about_web_message">برای دسترسی به اطلاعات کامل داروی سینورا، به وب سایت رسمی سینورا مراجعه فرمایید.</string>
    <string name="about_web_button">مشاهده وب سایت سینورا</string>
    <string name="about_web_value">http://www.cinnora.com</string>
    <string name="welcome_action">خوش آمدید</string>
    <string name="welcome_title">Welcome to Solife</string>
    <string name="welcome_message">" این یک نرم افزار دستیار پزشکی نیست و صرفا برای سازماندهی مصرف داروی سینورا می باشد. لطفا قوانین مربوط به استفاده از این نرم افزار رو مطالعه کنید و سپس موافقت خود را با ادامه کار با نرم افزار.اعلام کنید"</string>
    <string name="welcome_terms">®قوانین استفاده از داروی سینورا</string>
    <string name="welcome_accept">Accept</string>
    <string name="medication_dose_title">دوز داروی سینورا</string>
    <string name="medication_dose_message">در اکثر مواقع دوز اولیه داروی سینورا® با دوز ادامه درمان (درمان نگهدارنده) تفاوت دارد.لطفا اطلاعات دوز اولیه و دوز نگهدارنده تجویز شده برای خود را در ادامه وارد کنید. سوالات احتمالی در این زمینه را می‌توانید با پزشک خود مطرح نمایید.</string>
    <string name="medication_dose_start_title">دوز اولیه</string>
    <string name="medication_dose_start_message_1">دوز اولیه تجویز شده از داروی سینورا® برای شما چند میلی‌گرم است؟</string>
    <string name="medication_dose_start_message_2">هر فیزیوجکت™ (ابزار دارورسان خودکار) داروی سینورا® حاوی ۴۰ میلی‌گرم داروی آدالیمومب است.</string>
    <string name="medication_dose_40">40 mg</string>
    <string name="medication_dose_80">80 mg</string>
    <string name="medication_dose_40_d">(یک عدد فیزیوجکت™)</string>
    <string name="medication_dose_80_d">(دو عدد فیزیوجکت™)</string>
    <string name="medication_dose_start_date">لطفا تاریخ تزریق دوز اولیه سینورا® را انتخاب کنید.</string>
    <string name="medication_dose_maintain_title">دوز نگهدارنده (ادامه درمان)</string>
    <string name="medication_dose_maintain_message">تزریق دوز نگهدارنده خود را با چه فاصله زمانی انجام می‌دهید؟</string>
    <string name="medication_dose_maintain_date">لطفا تاریخ تزریق بعدی خود را انتخاب کنید.</string>
    <string name="medication_dose_maintain_alert">تاریخ تزریق بعدی می بایست بعد از آخرین تزریق باشد!</string>
    <string name="medication_time_title">لطفا ساعت مورد نظر خود برای تزریق را انتخاب کنید. نیم ساعت پیش از زمان انتخاب شده پیام یادآوری تزریق را دریافت خواهید کرد.</string>
    <string name="medication_time_prompt">What time woks best for injection?</string>
    <string name="medication_alarm_setup">تنظیمات هشدار نرم افزار</string>
    <string name="medication_alarm_title">پیام‌های یادآوری زیر توسط نرم‌افزار سولایف برای شما ارسال خواهند شد. جهت حفظ حریم شخصی شما، این امکان توسط سولایف فراهم شده است که با انتخاب هر گزینه امکان تغییر متن پیش فرض به متن دلخواه وجود داشته باشد.</string>
    <string name="medication_alarm_list_one">یک روز قبل از تزریق</string>
    <string name="medication_alarm_list_two">با فرارسیدن زمان تزریق</string>
    <string name="medication_alarm_list_three">در صورت فراموشی تزریق</string>
    <string name="medication_alarm_fine">تنظیمات تزریق با موفقیت انجام شد.</string>
    <string name="date_nexts">Next Injections</string>
    <string name="date_prev">Last Injections</string>
    <string name="date_prev_pos">Last Injection position</string>
    <string name="date_next">Next Injection</string>
    <string name="tips_0_title">درباره ارکیدلایف</string>
    <string name="tips_0_message">مرکز حمایت از بیمار ارکیدلایف، با پرستاران مجرب و جوان، خدمات آموزش به بیمار را با کیفیتی بالا ارائه می‌دهد. پرستاران ما قبل از مصرف، حین مصرف و بعد از مصرف دارو در کنار بیماران خود هستند. این مرکز به طور شبانه‌روزی و در تمامی روزهای هفته، پاسخگوی سوالات شما است.</string>
    <string name="tips_1_title">نکات سفر با سینورا®</string>
    <string name="tips_1_message_0">سفر با سینورا® ساده‌تر از آن است که می‌پندارید، اما رعایت نکات زیر ضروری است:</string>
    <string name="tips_1_message_1">به شرایط نگهداری سینورا® توجه داشته باشید. جهت محافظت از دارو در برابر نور، دارو را در جعبه اصلی نگهداری کنید. همچنین توجه داشته باشید که سینورا® دارویی یخچالی است و لازم است در دمای ۸-۲ درجه سانتی‌گراد نگهداری شود. در صورت کوتاه بودن مسیر می‌توانید داروی خود را به همراه یخ (قابل تهیه از داروخانه‌ها) حمل کنید. دقت کنید که یخ تهیه شده نباید مستقیما با فیزیوجکت™ (ابزار دارورسان خودکار) در تماس باشد. در صورت طولانی بودن مسیر می‌توانید با مرکز حمایت از بیمار ارکیدلایف تماس حاصل فرمایید.</string>
    <string name="tips_1_message_2">کیف مخصوص حمل دارو را از مراکز حمایت از بیمار ارکیدلایف درخواست کنید.</string>
    <string name="tips_1_message_3">در صورت مسافرت با هواپیما، به خاطر داشته باشید که دارو را همراه چمدان به قسمت بار هواپیما نفرستید،  زیرا درجه حرارت در محل نگهداری بار هواپیما، بسیار کاهش خواهد یافت و امکان یخ‌زدگی دارو وجود دارد.</string>
    <string name="tips_1_message_4">جهت دریافت اطلاعات بیشتر در این زمینه با مرکز حمایت از بیمار ارکیدلایف تماس حاصل فرمایید.</string>
    <string name="tips_2_title">هم‌دماسازی سینورا® با محیط</string>
    <string name="tips_2_message">توصیه می‌شود ۳۰-۱۵ دقیقه پیش از تزریق، داروی سینورا® را از یخچال خارج نمایید تا با محیط هم‌دما شود. در اپلیکیشن سولایف برای راحتی شما، محلی جهت تنظیم زمان هم‌دماسازی دارو وجود دارد.</string>
    <string name="tips_3_title">راهنمایی‌های مربوط به بیمه‌</string>
    <string name="tips_3_message">داروی سینورا® تحت پوشش بیمه ۹۰% قرار دارد و تنها ۱۰% از قیمت دارو، توسط فرد مبتلا پرداخت می‌شود. در صورت وجود هرگونه سوال در رابطه با بیمه یا دسترسی به دارو می‌توانید با مرکز حمایت از بیمار ارکیدلایف تماس حاصل فرمایید.</string>
    <string name="tips_4_title">همایش بیمار ارکیدلایف</string>
    <string name="tips_4_message">بسیاری از اوقات ممکن است به دلیل استرس یا کوتاه بودن مدت زمان ویزیت، مطرح کردن سوالات خود با پزشک معالج را فراموش کنید. توصیه می‌شود با یادداشت کردن سوالات خود از فراموش شدن آن‌ها جلوگیری کنید. علاوه بر این، مرکز حمایت از بیمار ارکیدلایف، به منظور ارتباط بیشتر شما با پزشکان متخصص، همایش‌های رایگانی را در مراکز استان‌ها برگزار می‌کند. جهت اطلاع از زمان برگزاری همایش در شهرستان خود می‌توانید با مرکز ارکیدلایف تماس گرفته یا به صفحه اینستاگرام پسوریازیس ارکیدلایف به نام Psoriasis.Orchidlife مراجعه نمایید.</string>
    <string name="tips_5_title">نکات تزریق</string>
    <string name="tips_5_message">تزریق داروی سینورا® می‌تواند توسط خود شما و در منزل انجام  شود. توصیه می‌شود نحوه تزریق صحیح را از پزشک خود آموخته یا جهت آموزش نحوه صحیح تزریق و همینطور انجام تزریق رایگان توسط پرستاران مجرب به یکی از مراکز حمایت از بیمار ارکیدلایف مراجعه کنید. جهت دریافت نشانی و تلفن نزدیک‌ترین مرکز ارکیدلایف به محل زندگی خود می‌توانید با شماره ۴۲۵۹۳-۰۲۱ تماس حاصل فرمایید.  در بخش آماده‌سازی و تزریق این نرم‌افزار، نکات تزریق به صورت متن و تصویر قابل مشاهده است.</string>
    <string name="tips_6_title">تزریق خارج از برنامه</string>
    <string name="tips_6_message">در صورتی که تزریق سینورا® را فراموش کرده‌اید و پس از به یاد آوردن آن، در ارتباط با تزریق یا عدم تزریق دارو تردید دارید، می‌توانید در این زمینه با پزشک خود مشورت کرده یا با مرکز حمایت از بیمار ارکیدلایف تماس حاصل فرمایید. پاسخ به این سوال می‌تواند با توجه به شرایط شما و فاصله زمانی نسبت به تزریق قبل و بعد، متفاوت باشد.</string>
    <string name="tips_7_title">استرس و پسوریازیس</string>
    <string name="tips_7_message">برای بسیاری از افراد مبتلا به پسوریازیس، اضطراب و استرس می‌تواند محرک بروز یا افزایش شدت علائم پسوریازیس باشد. به طور کلی استرس به عنوان یک عامل محرک التهاب در نظر گرفته می‌شود و بیماری پسوریازیس نیز ماهیت التهابی دارد. خوشبختانه مطالعات نشان می‌دهند که کنترل استرس می‌تواند به بهبود علائم پسوریازیس کمک کند. به منظور کنترل استرس می‌توانید از مدیتیشن، ورزش یا کمک گرفتن از مشاور بهره ببرید.</string>
    <string name="tips_8_title">تغییر سبک زندگی و پسوریازیس</string>
    <string name="tips_8_message">کشیدن سیگار، چاقی و استرس می‌تواند بر ابتلا یا تشدید علائم پسوریازیس تاثیر بگذارد. همچنین برخی افراد پس از استفاده از برخی مواد غذایی، بدتر شدن علائم پسوریازیس را گزارش کرده‌اند. نحوه استحمام، نحوه مراقبت از پوست در هوای سرد یا گرم و مواردی از این قبیل می‌تواند در افراد مبتلا به پسوریازیس با سایر افراد متفاوت باشد. جهت دریافت راهنمایی در رابطه با سبک زندگی خود می‌توانید به صفحه اینستاگرام پسوریازیس ارکیدلایف با نام Psoriasis.Orchidlife مراجعه فرمایید.</string>
    <string name="inbox_0_title">به سولایف خوش آمدید.</string>
    <string name="inbox_0_message">نرم‌افزار سولایف حاوی اطلاعات آموزشی شامل نحوه صحیح تزریق، اطلاعات دارویی، توصیه‌های ایمنی و سوالات متداول درباره داروي سينوراي شما مي‌باشد.\.همچنين از طريق سولايف مي توانيد زمان‌بندي تزريق داروي سينوراي خود را تعیین کنید. \nاين نرم‌افراز از سوي اركيدلايف پشتيباني مي‌شود.\nاز طریق شماره زیر با ما در تماس باشيد:\n٠٢١٤٢٥٩٣</string>
    <string name="injection_start_title">شروع مراحل تزریق</string>
    <string name="injection_slide_title">آموزش تصویری</string>
    <string name="injection_tips_title">یک توصیه مهم</string>
    <string name="injection_preps_title">آماده‌سازی</string>
    <string name="injection_logs_title">ثبت تزریق</string>
    <string name="injection_slides_title">تزریق صحیح سینورا®</string>
    <string name="injection_slides_message">در این تصاویر نحوه تزریق صحیح سینورا® نمایش داده شده است.</string>
    <string name="injection_slides_0">سطح مورد نظر از پوست را که برای تزریق انتخاب کرده‌اید با پنبه آغشته به الکل ضدعفونی کنید.</string>
    <string name="injection_slides_1">سطح مورد نظر از پوست را که برای تزریق انتخاب کرده‌اید با پنبه آغشته به الکل ضدعفونی کنید.</string>
    <string name="injection_pos_abdomen">ناحیه شکم</string>
    <string name="injection_pos_lleg">ران چپ</string>
    <string name="injection_pos_rleg">ران راست</string>
    <string name="injection_body_title">انتخاب محل تزریق: مرحله ۱ از ۲</string>
    <string name="injection_body_message">ناحیه تزریق امروز خود را انتخاب کنید تا با بزرگنمایی آن ناحیه، امکان انتخاب دقیق محل تزریق وجود داشته باشد.</string>
    <string name="injection_body_date_prompt">تاریخ و زمان تزریق</string>
    <string name="injection_log_title">انتخاب محل تزریق</string>
    <string name="injection_log_message">جهت نمایش محل تزریق امروز خود، یکی از خانه‌های مربعی شکل زیر را انتخاب کنید.</string>
</resources>