<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navi_0"
        android:icon="@drawable/ic_navi_injection"
        android:title="@string/home_injection" />

    <item
        android:id="@+id/navi_1"
        android:icon="@drawable/ic_navi_calendar"
        android:title="@string/home_calendar" />

    <item
        android:id="@+id/navi_2"
        android:icon="@drawable/ic_navi_tips"
        android:title="@string/home_tips" />

    <item
        android:id="@+id/navi_3"
        android:icon="@drawable/ic_navi_inbox"
        android:title="@string/home_inbox" />

    <item
        android:id="@+id/navi_4"
        android:icon="@drawable/ic_navi_more"
        android:title="@string/home_more" />

</menu>
