<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inject_body_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/inject_body_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/injection_body_title"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/inject_body_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/injection_body_message"
        android:textColor="@color/colorDark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inject_body_title"
        tools:ignore="MissingConstraints" />

    <com.grantech.cinnagen.solife.controls.PickerInput
        android:id="@+id/inject_body_pickerInput"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/inject_body_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:prompt="@string/injection_body_date_prompt"
        app:text="@string/app_today" />

    <com.grantech.cinnagen.solife.controls.InjectionBoard
        android:id="@+id/inject_body_view"
        android:layout_width="0dp"
        android:layout_height="320dp"
        android:background="@drawable/rect_white"
        app:layout_constraintBottom_toBottomOf="@+id/inject_body_space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:nextVisibility="false"
        app:point="0,0"
        app:prevVisibility="false"
        app:raduisMask="0">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/inject_body_abdomen_button"
            android:layout_width="110dp"
            android:layout_height="62dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rect_round_cyan"
            android:text="@string/injection_pos_abdomen"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/inject_body_leg_right_button"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginEnd="104dp"
            android:layout_marginBottom="96dp"
            android:background="@drawable/rect_round_cyan"
            android:text="@string/injection_pos_rleg"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/inject_body_leg_left_button"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="104dp"
            android:layout_marginBottom="96dp"
            android:background="@drawable/rect_round_cyan"
            android:text="@string/injection_pos_lleg"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/inject_body_inner_shadow_top"
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:layout_marginTop="0dp"
            android:src="@drawable/rect_shadow_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.grantech.cinnagen.solife.controls.InjectionBoard>

    <androidx.legacy.widget.Space
        android:id="@+id/inject_body_space"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        app:layout_constraintTop_toBottomOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>