<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inject_log_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/inject_log_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/injection_log_title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/inject_log_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/injection_log_message"
        android:textColor="@color/colorMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inject_log_title"
        tools:ignore="MissingConstraints" />

    <com.grantech.cinnagen.solife.controls.PickerInput
        android:id="@+id/inject_log_pickerInput"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/injection_log_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:prompt="@string/injection_body_date_prompt"
        app:text="@string/app_today" />

    <com.grantech.cinnagen.solife.controls.InjectionBoard
        android:id="@+id/injection_log_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rect_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:nextVisibility="true"
        app:nextPointVisibility="true"
        app:prevPoint="0,1"
        app:prevPointVisibility="true"
        app:prevVisibility="true"
        app:nextPoint="100,82"
        app:raduisMask="0"
        app:touchable="true">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/inject_log_inner_shadow_top"
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:layout_marginTop="0dp"
            android:src="@drawable/rect_shadow_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/submit_button"
            style="@style/primaryButton"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:alpha="0.7"
            android:text="@string/app_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="128dp" />

    </com.grantech.cinnagen.solife.controls.InjectionBoard>


</androidx.constraintlayout.widget.ConstraintLayout>